--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -12,6 +12,15 @@
   ===========================================================
 */
 
+:root {
+  --azul-vibrante: #3d55cc;
+  --cinza-escuro: #141a33;
+  --cinza: #505673;
+  --cinza-leve: #dadef2;
+  --cinza-claro: #f5f6fa;
+  --branco: #FFFFFF;
+}
+
 /* Garantir que todos os elementos comecem do mesmo ponto.
    Ensure that all elements start from the same point.
    RESET.
@@ -32,7 +41,7 @@
   Space above the header
 */
 .home-above-header-spacing {
-  height: 8pt;
+  height: 24pt;
 }
 
 /*Espaço abaixo do header 
