--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -53,4 +53,5 @@
   margin-left: var(--space-xxl);
   margin-right: var(--space-xxl);
   font-family: "Poppins", sans-serif;
+  color: var(--branco);
 }
