--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -54,6 +54,7 @@ header {
   margin: 0;
   text-align: left;
   align-items: flex-start;
+  color: var(--cinza-escuro);
 }
 .logo {
   display: flex;
@@ -71,6 +72,7 @@ header {
   align-items: center;
   display: inline-block;
   line-height: 1;
+  color: var(--cinza-escuro);
 }
 .logo .liste {
   font-weight: 400;
@@ -80,6 +82,7 @@ header {
   align-items: center;
   display: inline-block;
   line-height: 1;
+  color: var(--cinza-escuro);
 }
 
 .nav {
