--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -9,12 +9,32 @@
   Space below the header
 */
 .home-below-header-spacing {
-  height: var(--space-xxl);
+  height: var(--space-xl);
 }
 
 /*Espaço abaixo do conteúdo 
   Space below the content
 */
-.home-below-content {
-  height: var(--space-m);
+.home-below-featured-title {
+  height: var(--space-s);
+}
+
+h1 {
+  margin: var(--reset-space);;
+  font-size: 3rem;
+  line-height: 1.2;
+  font-weight: 400;
+  color: var(--cinza-escuro);
+}
+.featured-title {
+  font-weight: bold;
+  color: var(--cinza-escuro);
+}
+.subtitle {
+  margin: var(--reset-space);
+  font-size: 1.125rem;
+  line-height: 1.6;
+  letter-spacing: 0.05em;
+  font-weight: 400;
+  color: var(--cinza-escuro);
 }
