Add Button component; Update Home layout with spacing and new styles;

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -49,9 +49,10 @@
   box-sizing: border-box;
 }
 
-.body {
-  margin-left: var(--space-xxl);
-  margin-right: var(--space-xxl);
+body {
+  margin-left: 165pt;
+  margin-right: 165pt;
+  height: 100%;
   font-family: "Poppins", sans-serif;
   color: var(--white);
 }
