--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -16,13 +16,17 @@
   width: 100%;
   padding: var(--space-s);
   font-size: 16px;
-  border: 1px solid var(--grey);
+  border: 1px solid var(--light-grey);
   border-radius: 4px;
   letter-spacing: 0.16em;
   line-height: 1.2;
   font-weight: 500;
   text-align: left;
   color: var(--grey);
+}
+.link-box:focus {
+  outline: none;
+  border: 2px solid var(--blue-vibrant) !important;
 }
 .spacing-between-link-box-btn {
   height: var(--space-s);
@@ -33,6 +37,7 @@
   align-items: center;
 }
 .convert-btn {
+  cursor: pointer;
   width: 100%;
   border-radius: 4px;
   background-color: var(--blue-vibrant);
@@ -45,4 +50,20 @@
   line-height: 1.2;
   font-weight: bold;
   color: var(--white);
+  box-shadow: 
+  0 3px 1px -2px rgba(0, 0, 0, 0.12),
+  0 3px 2px -2px rgba(0, 0, 0, 0.12),
+  0 3px 1px -2px rgba(0, 0, 0, 0.12);
+}
+.container-btn:hover {
+  background-color: #0047ab;
+  border-radius: 4px;
+  box-shadow: 
+  0 4px 6px rgba(0, 0, 0, 0.1),
+  0 4px 6px rgba(0, 0, 0, 0.1),
+  0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.container-btn:active {
+  background-color: #0047ab;
+  transform: scale(0.98);
 }
