--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -115,5 +115,23 @@ header {
 .nav-list li a:hover {
   color: var(--blue-vibrant);
 }
+.nav-item {
+  position: relative;
+  color: var(--dark-grey);
+  text-decoration: none;
+}
+.nav-item.active::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--blue-vibrant);
+  transition: width 0.3s ease;
+}
+.nav-item:hover::after {
+  width: 100%;
+}
 
 
