Enhance layout and styling: add smooth scrolling, update active page logic, and integrate About section into Home page

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -54,6 +54,10 @@
 body {
   margin-left: var(--space-margin-large);
   margin-right: var(--space-margin-large);
-  height: 100%;
   font-family: "Poppins", sans-serif;
+  background-color: var(--white);
+}
+
+html {
+  scroll-behavior: smooth;
 }
