--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -26,6 +26,13 @@
   height: var(--space-xxl);
 }
 
+.home-section {
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+}
+
 h1 {
   margin: var(--reset-space);;
   font-size: 3rem;
