--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -11,45 +11,76 @@
 .title-bnfts {
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
-
-
-.wrapper {
+.benefits-cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 24pt;
+  padding: 0 16px;
+}
+.card {
+  border-radius: 8px;
+  width: 23%;
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.card p {
+  font-size: 1rem;
+  color: #333;
+}
+.card .icon-container {
+  width: 50px;
+  margin: 0 auto;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  color: var(--white);
+  font-size: 24px;
+}
+.icon-container {
+  border-top: 2px dashed var(--blue-vibrant);
 }
 
-.big-title {
-  font-size: 120px;
+.about-content {
+  padding: 44pt 0;
+}
+.black-wall {
+  width: 100%;
+  height: 350px;
+  border-radius: 16px 16px 0 0;
+  background-color: var(--dark-grey);
+  align-items: flex-start;
+  justify-content: center;
+  display: flex;
+}
+.about-white-zone {
+  width: 30%;
+  padding: 14px;
+  border-radius: 15px;
+  background-color: var(--white);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: -10px;
+}
+.about-title {
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-size: 25px;
   font-weight: bold;
-  color: var(--light-grey);
-}
-.overlay-vibra-word,
-.overlay-liste-word,
-.overlay-bold-n {
-  position: absolute;
-  z-index: 1;
-  font-size: 36px;
-  color: var(--dark-grey);
-}
-.overlay-liste-word {
-  font-weight: 400;
-  top: 55%;
-  left: 48.5%;
-  transform: translate(-50%, -50%);
-}
-.overlay-vibra-word {
-  font-weight: bold;
-  top: 55%;
-  left: 22.5%;
-  transform: translate(-50%, -50%);
-}
-.overlay-bold-n {
-  font-weight: bold;
-  top: 55%;
-  left: 63.2%;
-  transform: translate(-50%, -50%);
+  color: var(--blue-vibrant);
 }
 
 .body-text {
