--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -55,16 +55,17 @@
 .about-content {
   padding: 44pt 0;
 }
-.black-wall {
+.container-black-wall {
   width: 100%;
-  height: 350px;
+  height: 370px;
   border-radius: 16px 16px 0 0;
   background-color: var(--dark-grey);
-  align-items: flex-start;
-  justify-content: center;
   display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
-.about-white-zone {
+.container-white-zone {
   width: 30%;
   padding: 14px;
   border-radius: 15px;
@@ -83,11 +84,24 @@
   color: var(--blue-vibrant);
 }
 
-.body-text {
-  text-align: left;
+.body-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+ margin-top: 40px;
+  margin-bottom: 20px;
 }
-.body-text p {
+.body-text {
   font-size: 18px;
   line-height: 1.6;
-  padding-right: 200px;
+  color: var(--white);
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.vibra-word {
+  font-weight: bold;
+}
+.liste-word {
+  color: var(--light-grey);
 }
