--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -57,7 +57,7 @@
 }
 .container-black-wall {
   width: 100%;
-  height: 370px;
+  height: 470px;
   border-radius: 16px 16px 0 0;
   background-color: var(--dark-grey);
   display: flex;
@@ -104,4 +104,19 @@
 }
 .liste-word {
   color: var(--light-grey);
+}
+
+.container-circles {
+  position: relative;
+  text-align: center;
+  margin-top: 100px;
+}
+.title-circles {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  color: #333;
+  z-index: 10;
 }
