--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -57,7 +57,7 @@
 }
 .container-black-wall {
   width: 100%;
-  height: 470px;
+  height: 570px;
   border-radius: 16px 16px 0 0;
   background-color: var(--dark-grey);
   display: flex;
@@ -109,14 +109,30 @@
 .container-circles {
   position: relative;
   text-align: center;
-  margin-top: 100px;
+  margin-top: 195px;
 }
 .title-circles {
+  position: relative;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -150%);
+  font-size: 2rem;
+  color: var(--white);
+  z-index: 10;
+}
+.circle {
   position: absolute;
+  border-radius: 50%;
+  border: 2px solid var(--white);
+  z-index: 1;
+  background: transparent;
+}
+.medium {
+  width: 250px;
+  height: 250px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 2rem;
-  color: #333;
-  z-index: 10;
+  border-image: linear-gradient(to bottom, white 
+  0%, rgba(255, 255, 255, 0) 50%)1;
 }
