--- a/frontend/src/pages/About/About.css
+++ b/frontend/src/pages/About/About.css
@@ -143,7 +143,7 @@
 }
 .card {
   width: 250px;
-  height: 420px;
+  height: 390px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
@@ -154,10 +154,12 @@
 }
 .card img {
   width:60%;
-  height: 280px;
+  height: 200px;
   display: block;
   margin: 0 auto;
   align-self: center;
+  object-fit: cover;
+  
 }
 .card-content {
   padding: 1.2rem;
@@ -177,10 +179,11 @@
 }
 .card-1 img {
   order: 2;
+  object-position: top;
 }
 .card-2 img {
   order: 1;
-  margin-top: 20px;
+  object-position: bottom;
 }
 .card-2 .card-content {
   order: 2;
@@ -190,4 +193,5 @@
 }
 .card-3 img {
   order: 2;
+  object-position: top;
 }
