--- a/frontend/src/pages/FAQs/FAQs.css
+++ b/frontend/src/pages/FAQs/FAQs.css
@@ -1,4 +1,15 @@
 .faqs-section {
   min-height: 100vh;
   width: 100%;
+  padding: 80px 0;
+}
+
+.faqs-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.faqs-title {
+  margin: 0;
 }
