--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -52,3 +52,14 @@ h1 {
   font-weight: 400;
   color: var(--dark-grey);
 }
+
+.about-section {
+  min-height: 100vh;
+  width: 100%;
+}
+
+.faqs-section {
+  min-height: 100vh;
+  width: 100%;
+  margin-top: 80pt;
+}
