--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -78,13 +78,57 @@
   line-height: 1.6;
 }
 
-.container-cell {
+.contact-content-form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
   background-color: var(--light-grey);
   border-radius: 12px;
   margin-top: 4.4%;
   gap: 12px;
+  padding: 20px;
+}
+.container-cell {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+.container-name, .container-email,
+.container-phone, .container-subject {
+  flex: 1 1 45%;
+}
+.container-message {
+  flex: 1 1 100%;
+  text-align: left;
+}
+.container-btn {
+  display: flex;
+  justify-content: center;
+}
+.send-message-bnt {
+  max-width: 50%;
+}
+.container-message textarea.input {
+  width: 100%;
+  height: 150px;
+  resize: none;
+  overflow: auto;
+  padding-top: 13px;
+  padding-left: 13px;
+  border-radius: 10px;
+  background-color: var(--grey);
+  color: var(--white);
+  border: none;
+}
+.container-message textarea.input::placeholder{
+   color: var(--white);
+}
+.container-message textarea.input::-moz-placeholder {
+  color: var(--white);
+}
+.container-message textarea.input:-ms-input-placeholder {
+  color: var(--white);
+}
+.container-message textarea.input::-ms-input-placeholder {
+  color: var(--white);
 }
