--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -97,38 +97,90 @@
 .container-phone, .container-subject {
   flex: 1 1 45%;
 }
+.container-name input.input-name, 
+.container-email input.input-email,
+.container-phone input.input-phone,
+.container-subject input.input-subject {
+  font-size: 12px;
+  margin-top: 2.5%;
+  border-radius: 10px;
+  color: var(--white);
+  background-color: var(--grey);
+  border: none;
+}
 .container-message {
   flex: 1 1 100%;
   text-align: left;
+}
+.title-message, .title-subject,
+.title-phone, .title-email,
+.title-name {
+  margin-top: 3.5%;
+  font-size: 14px;
+  color: var(--white);
+}
+.container-message textarea.input-message {
+  width: 100%;
+  height: 150px;
+  resize: none;
+  overflow: auto;
+  font-size: 12px;
+  margin-top: 2.5%;
+  padding-top: 13px;
+  padding-left: 13px;
+  border-radius: 10px;
+  color: var(--white);
+  background-color: var(--grey);
+  
+}
+textarea.input-message:focus,
+input.input-name:focus,
+input.input-email:focus,
+input.input-phone:focus,
+input.input-subject:focus {
+  outline: none;
+  box-shadow: none;
+  border: 3.5px solid var(--blue-vibrant);
+}
+.container-message textarea.input-message::placeholder,
+.container-name input.input-name::placeholder, 
+.container-email input.input-email::placeholder,
+.container-phone input.input-phone::placeholder,
+.container-subject input.input-subject::placeholder {
+   color: var(--white);
+}
+.container-message textarea.input-message::-moz-placeholder,
+.container-name input.input-name::-moz-placeholder, 
+.container-email input.input-email::-moz-placeholder,
+.container-phone input.input-phone::-moz-placeholder,
+.container-subject input.input-subject::-moz-placeholder {
+  color: var(--white);
+}
+.container-message textarea.input-message:-ms-input-placeholder,
+.container-name input.input-name:-ms-input-placeholder, 
+.container-email input.input-email:-ms-input-placeholder,
+.container-phone input.input-phone:-ms-input-placeholder,
+.container-subject input.input-subject:-ms-input-placeholder {
+  color: var(--white);
+}
+.container-message textarea.input-message::-ms-input-placeholder,
+.container-name input.input-name::-ms-input-placeholder, 
+.container-email input.input-email::-ms-input-placeholder,
+.container-phone input.input-phone::-ms-input-placeholder,
+.container-subject input.input-subject::-ms-input-placeholder {
+  color: var(--white);
 }
 .container-btn {
   display: flex;
   justify-content: center;
 }
 .send-message-bnt {
-  max-width: 50%;
-}
-.container-message textarea.input {
-  width: 100%;
-  height: 150px;
-  resize: none;
-  overflow: auto;
-  padding-top: 13px;
-  padding-left: 13px;
-  border-radius: 10px;
-  background-color: var(--grey);
+  width: 145px;
+  height: 45px;
+  text-align: center;
   color: var(--white);
+  background-color: var(--blue-vibrant);
   border: none;
-}
-.container-message textarea.input::placeholder{
-   color: var(--white);
-}
-.container-message textarea.input::-moz-placeholder {
-  color: var(--white);
-}
-.container-message textarea.input:-ms-input-placeholder {
-  color: var(--white);
-}
-.container-message textarea.input::-ms-input-placeholder {
-  color: var(--white);
+  border-radius: 6px;
+  font-size: 12px;
 }
