--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -12,15 +12,17 @@
   min-width: 300px;
 }
 .title-contact-us {
-  font-size: 36px;
-  font-weight: 500;
+  font-size: 64px;
+  font-weight: 600;
   color: var(--white);
   padding-bottom: 3.5%;
+  line-height: 1.2em;
+  margin-top: 0;
 }
 .intro-contact-txt, .support-txt, 
 .github-icon-container, .open-source-github-txt,
 .contribute-subtitle {
-  color: var(--light-grey);
+  color: #a6acb8;
   font-size: 13.5px;
   width: 99%;
 }
@@ -33,6 +35,7 @@
 .report-problem-txt {
   font-weight: bold;
   line-height: 1.6;
+  color: var(--white);
 }
 .github-link {
   display: flex;
@@ -70,23 +73,21 @@
   text-decoration: none;
   padding-top: 3%;
 }
-.open-github {
+.open-github, .contribute-subtitle {
   text-decoration: none;
   color: var(--white);
-}
-.open-source-github-txt {
-  line-height: 1.6;
 }
 
 .contact-content-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--light-grey);
-  border-radius: 12px;
+  background-color: #1d263b;
+  border-radius: 24px;
   margin-top: 4.4%;
   gap: 12px;
   padding: 20px;
+  align-items: stretch;
 }
 .container-cell {
   display: flex;
@@ -105,8 +106,10 @@
   margin-top: 2.5%;
   border-radius: 10px;
   color: var(--white);
-  background-color: var(--grey);
-  border: none;
+  background-color: rgba(255, 255, 255, .1);
+  border: 1px solid rgba(255, 255, 255, .2);
+  height: 64px;
+  padding: 20px;
 }
 .container-message {
   flex: 1 1 100%;
@@ -126,11 +129,10 @@
   overflow: auto;
   font-size: 12px;
   margin-top: 2.5%;
-  padding-top: 13px;
-  padding-left: 13px;
+  padding: 20px;
   border-radius: 10px;
   color: var(--white);
-  background-color: var(--grey);
+  background-color: rgba(255, 255, 255, .1);
   
 }
 textarea.input-message:focus,
@@ -175,12 +177,17 @@ input.input-subject:focus {
   justify-content: center;
 }
 .send-message-bnt {
-  width: 145px;
-  height: 45px;
+  padding: 20px 30px;
+  font-weight: 600;
+  line-height: 20px;
   text-align: center;
   color: var(--white);
   background-color: var(--blue-vibrant);
   border: none;
-  border-radius: 6px;
+  border-radius: 10px;
   font-size: 12px;
+  display: inline-block;
+  font: inherit;
+  transform-style: preserve-3d;
+  justify-self: start;
 }
