--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -71,3 +71,9 @@ h1 {
   background-color: var(--dark-grey);
   border-radius: 30px 30px 0 0;
 }
+
+.footer-section {
+  min-height: 25vh;
+  width: 100%;
+  margin-top: 80pt;
+}
