Add Privacy and Terms of Use pages; update Footer component with new links

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -1,16 +1,4 @@
-/* 
-  ===========================================================
-  Project: VibraListen (Youtube to MP3 Converter)
-  Author: Lodney Santos
-  Creation Date: 06/01/2025
-  Latest Update: 01/02/2025
-  Description: This is a full-stack web app that converts 
-             YouTube videos to MP3. The backend uses 
-             Node.js with Express for video download and 
-             conversion, while the frontend provides an 
-             interface to input links and download MP3 files.
-  ===========================================================
-*/
+/* VibraListen - Global Styles */
 
 :root {
   /* Paleta de cores
