Refactor button component styles and structure; add new color variable and update main entry point

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -5,6 +5,7 @@
   Colour palette
   */
   --blue-vibrant: #3d55cc;
+  --blue-vibrant-baby: #3e5efe;
   --dark-grey: #141a33;
   --grey: #505673;
   --light-grey: #dadef2;
