Refactor layout and styling; adjust global margins, footer design, and enhance home page structure

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -23,7 +23,7 @@
   --space-xxl: 56pt;
   --space-xxxl: 80pt;
   --global-margin-left: 130pt;
-  --global-margin-right: 168pt;
+  --global-margin-right: 190pt;
   --reset-space: 0;
 
   /* Tipografia 
@@ -42,8 +42,6 @@
 }
 
 body {
-  padding-left: var(--global-margin-left);
-  padding-right: var(--global-margin-right);
   font-family: "Poppins", sans-serif;
   background-color: var(--white);
   width: 100vw;
@@ -53,4 +51,12 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.container-layout {
+  width: 100%;
+  padding-left: var(--global-margin-left);
+  padding-right: var(--global-margin-right);
+  box-sizing: border-box;
+  margin: 0 auto;
 }
