--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -31,6 +31,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--white);
+  margin-bottom: 80pt;
 }
 
 h1 {
@@ -53,9 +54,12 @@ h1 {
   color: var(--dark-grey);
 }
 
+/*Other sections*/
+
 .about-section {
   min-height: 100vh;
   width: 100%;
+  margin-top: 80pt;
 }
 
 .faqs-section {
@@ -69,11 +73,10 @@ h1 {
   width: 100%;
   margin-top: 80pt;
   background-color: var(--dark-grey);
-  border-radius: 30px 30px 0 0;
+  border-radius: 30px;
 }
 
 .footer-section {
   min-height: 3vh;
-  width: 100%;
   margin-top: 30pt;
 }
