--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -72,11 +72,16 @@ h1 {
   min-height: 100vh;
   width: 100%;
   margin-top: 80pt;
+  margin-bottom: -100pt;
   background-color: var(--dark-grey);
-  border-radius: 30px;
+  border-radius: 30px 30px 30px 30px;
+  position: relative;
+  z-index: 2;
 }
 
 .footer-section {
   min-height: 3vh;
   margin-top: 30pt;
+  z-index: 1;
+  position: relative;
 }
