--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,23 +1,30 @@
 .footer-content {
-  display: flex;
-  justify-content: space-between;
+  position: relative;
+  justify-content: center;
+  align-items: center;
   background-color: var(--white);
-  padding: 40px 190pt 30px 130pt;
-  height: 45vh;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, .4);
+  padding: 25px 130pt 30px 130pt;
+  height: 35vh;
+}
+.footer-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 130pt;
+  right: 130pt;
+  height: 1px;
+  background-color: rgba(0, 0, 0, .1);
 }
 .footer-logo-container a {
   display: flex;
   text-decoration: none;
   align-items: center;
   text-align: center;
-  gap: 8pt;
+  gap: 5pt;
   color: inherit;
-  transition: transform .3s;
 }
 .footer-logo-container a:hover {
   opacity: 0.8;
-  transform: scale(0.95);
 }
 .footer-logo-image {
   width: 42px;
@@ -33,10 +40,10 @@
   margin-top: 9px;
 }
 .slogan-footer {
-  font-weight: bold;
+  font-weight: 500;
   font-size: 10px;
-  letter-spacing: 0.20em;
-  line-height: 1.2;
+  letter-spacing: 0.5px;
+  line-height: 1.4;
   margin: 0;
   text-align: left;
   align-items: flex-start;
@@ -45,32 +52,76 @@
 .footer-logo {
   display: flex;
   flex-wrap: nowrap;
-  gap: 0;
   line-height: 1;
   all: unset;
   flex-direction: row;
 }
 .footer-logo .footer-vibra {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 900;
   margin: 0;
-  letter-spacing: 0.22em;
+  letter-spacing: 1px;
+  Line-height: 1.4;
   align-items: center;
   display: inline-block;
   color: var(--dark-grey);
 }
 .footer-logo .footer-liste {
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 500;
+  font-size: 16px;
   margin: 0;
-  letter-spacing: 0.22em;
+  letter-spacing: 1px;
   align-items: center;
   display: inline-block;
-  line-height: 1;
+  Line-height: 1.4;
   color: var(--dark-grey);
 }
-.footer-logo-text-below {
-  margin: 0 auto;
+.footer-social-media-area {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  margin-right: 130pt;
+  padding-top: 10px;
+}
+.footer-social-media {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  font-size: 22px;
+  color: var(--blue-vibrant);
+  transition: transform .3s;
+}
+.social-media-links {
+  display: flex;
+  justify-content: flex-end;
+  Font-weight: 500;
+  Font-size: 16px;
+  Letter-spacing: 0.5px;
+  Line-height: 1.4;
+  padding-bottom: 10px;
+  color: var(--black);
+}
+.dribbble-icon a, .github a {
+  text-decoration: none;
+  color: inherit;
+}
+.dribbble-icon, .github {
+  cursor: pointer;
+}
+.dribbble-icon:hover, .github:hover {
+  color: var(--blue-vibrant);
+  opacity: 50%;
+  transform: scale(0.95);
+}
+.inspiring-phrase {
+  Font-size: 14px;
+  Font-weight: 500px;
+  Letter-spacing: 0.5px;
+  Line-height: 1.4;
+  color: var(--dark-grey);
 }
 
 .nav {
@@ -78,19 +129,21 @@
 }
 .nav-list-footer {
   display: flex;
-  gap: var(--space-l);
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 15pt;
+  gap: 24pt;
+  height: 80px;
+  align-items: center;
+  justify-content: flex-start;
 }
 .nav-list-footer a {
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 500;
   text-decoration: none;
   color: #000;
-  letter-spacing: 0.05em;
-  line-height: 1.4px;
+  letter-spacing: 0.5px;
+  line-height: 1.4;
 }
 .nav-list-footer li a {
   color: var(--dark-grey);
@@ -146,17 +199,12 @@
   background-color: var(--blue-vibrant);
   border-radius: 50%;
   padding: 10px;
-  width: 50px;
-  height: 50px;
-}
-.footer-github-icon {
-  position: relative;
-  color: var(--white);
-  font-size: 30px;
+  width: 35px;
+  height: 35px;
 }
 .footer-contribute-subtitle {
   text-decoration: none;
-  color: var(--dark-grey);
+  color: var(--white);
 }
 .footer-github-color:hover .footer-contribute-subtitle,
 .footer-github-link:hover .footer-contribute-subtitle,
@@ -165,17 +213,29 @@
 }
 
 .footer-all-rights {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: var(--white);
-  border: 1px solid var(--dark-grey);
-  height: 8.2vh;
-  padding: 0 190pt 0 130pt;
+  height: 12.2vh;
+  padding: 0 130pt 0 130pt;
+}
+.footer-all-rights::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 130pt;
+  right: 130pt;
+  height: 1px;
+  background-color: rgba(0, 0, 0, .1);
 }
 .footer-all-rights p.footer-vibralisten, 
 .footer-rigth {
   font-size: 14px;
+  Font-weight: 400px;
+  Letter-spacing: 0.5px;
+  Line-height: 1.4;
   color: var(--dark-grey);
 } 
 .footer-left {
@@ -216,6 +276,6 @@
   margin-right: 3px;
 }
 .footer-logo-short {
-  width: 32px;
-  height: 32px;
+  width: 52px;
+  height: 52px;
 }
